# SocketeDeck

./: README.md  START-SERVER.ps1  SocketeDeck.py  acciones.py  cliente.py  config.json  configuracion.py  main.py  pyproject.toml  requirements.txt
SocketeDeck-app/: settings.gradle
SocketeDeck-app/app/: build.gradle
SocketeDeck-app/app/src/androidTest/java/com/crizacio/socketedeck/: ExampleInstrumentedTest.java
SocketeDeck-app/app/src/main/: AndroidManifest.xml
SocketeDeck-app/app/src/main/java/com/crizacio/socketedeck/: ConfigActivity.java  MainActivity.java
SocketeDeck-app/app/src/main/java/com/crizacio/socketedeck/Clases/: Acciones.java  AccionesListAdapter.java  Configuracion.java
SocketeDeck-app/app/src/main/res/layout/: activity_config.xml  dialog_acciones.xml  lista_doble.xml
SocketeDeck-app/app/src/main/res/values/: strings.xml  themes.xml
SocketeDeck-app/app/src/main/res/values-night/: themes.xml
SocketeDeck-app/app/src/test/java/com/crizacio/socketedeck/: ExampleUnitTest.java
SocketeDeck-app/gradle/wrapper/: gradle-wrapper.properties
acciones/: controles.py  obs.py  overwatch_chat.py  toxic_prompts.py
