[project]
name = "socketedeck"
version = "0.1.0"
description = "Like a StreamDeck, but for the poor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard==0.13.5",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mouseinfo==0.1.3",
    "obs-cli==0.8.2",
    "obsws-python==1.7.1",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pygments==2.19.1",
    "pymsgbox==1.0.9",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytweening==1.2.0",
    "rich==14.0.0",
    "websocket-client==1.8.0",
]
